# user_ligin_cpp

./: .gitignore  CMakeLists.txt  main.cpp
src/: CheckUsername.cpp  CheckUsername.h  CompareCredentials.cpp  CompareCredentials.h  CreateFile.cpp  CreateFile.h  FakeData.cpp  FakeData.h  ParseUserInput.cpp  ParseUserInput.h
users/: users.txt
